--- a/Kasa/src/App.scss
+++ b/Kasa/src/App.scss
@@ -1,3 +1,4 @@
-h1{
-    color: red;
-}
+@import "./components/Banner/Banner.scss";
+@import "./components/Footer/Footer.scss";
+@import "./components/Header/Header.scss";
+@import "./components/Location/Location.scss";
