Comencement de la section Cards

--- a/Kasa/src/App.scss
+++ b/Kasa/src/App.scss
@@ -1,4 +1,4 @@
 @import "./components/Banner/Banner.scss";
 @import "./components/Footer/Footer.scss";
 @import "./components/Header/Header.scss";
-@import "./components/Location/Location.scss";
+@import "./components/Cards/Cards.scss";
