--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -1,5 +1,5 @@
 
 @import "../components/Footer/Footer.scss";
 @import "../components/Banner/Banner.scss";
-@import "../components/Location/Location.scss";
+@import "../components/Cards/Cards.scss";
 @import "../components/Header/Header.scss";
