création de la page d'erreur 404 plus responsive design.

--- a/Kasa/src/App.scss
+++ b/Kasa/src/App.scss
@@ -2,3 +2,4 @@
 @import "./components/Footer/Footer.scss";
 @import "./components/Header/Header.scss";
 @import "./components/Cards/Cards.scss";
+@import "./components/ErrorBody/ErrorBody.scss";
