--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import "../components/Banner/Banner.scss";
 @import "../components/Cards/Cards.scss";
 @import "../components/Header/Header.scss";
+@import "../components/ErrorBody/ErrorBody.scss";
