Création du composants Footer, importation du composant sur les pages Homme et Error. Stylisation plus responsive design.

--- a/Kasa/src/components/ErrorBody/ErrorBody.scss
+++ b/Kasa/src/components/ErrorBody/ErrorBody.scss
@@ -35,6 +35,7 @@
 .link-error {
     color: #FF6060;
     font-size: 18px;
+    padding-bottom: 100px;
     @media screen and (max-width: 640px) {
         font-size: 14px;
         
