Création des listes déroulante, import du composant à la page About.jsx.

--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -4,3 +4,5 @@
 @import "../components/Cards/Cards.scss";
 @import "../components/Header/Header.scss";
 @import "../components/ErrorBody/ErrorBody.scss";
+@import "../components/AboutBanner/AboutBanner.scss";
+@import "../components/Dropdown/Dropdown.scss";
