--- a/Kasa/src/App.scss
+++ b/Kasa/src/App.scss
@@ -3,3 +3,5 @@
 @import "./components/Header/Header.scss";
 @import "./components/Cards/Cards.scss";
 @import "./components/ErrorBody/ErrorBody.scss";
+@import "./components/AboutBanner/AboutBanner.scss";
+@import "./components/Dropdown/Dropdown.scss";
