création d'un normalize.scss

--- a/Kasa/src/App.scss
+++ b/Kasa/src/App.scss
@@ -5,3 +5,4 @@
 @import "./components/ErrorBody/ErrorBody.scss";
 @import "./components/AboutBanner/AboutBanner.scss";
 @import "./components/Dropdown/Dropdown.scss";
+@import "../styles/normalize.scss";
