--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -6,3 +6,9 @@
 @import "../components/ErrorBody/ErrorBody.scss";
 @import "../components/AboutBanner/AboutBanner.scss";
 @import "../components/Dropdown/Dropdown.scss";
+@import "../styles/normalize.scss";
+
+
+
+
+
