--- a/Kasa/src/components/Cards/Cards.scss
+++ b/Kasa/src/components/Cards/Cards.scss
@@ -6,6 +6,8 @@
     width: 96%;
     margin-left: 40px;
     margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 25px;
 }
 
 .card {
@@ -15,4 +17,5 @@
     border-radius: 5%;
     margin-top: 30px;
     margin-left: 30px;
+    margin-bottom: 30px;
 }
