--- a/Kasa/src/components/Dropdown/Dropdown.scss
+++ b/Kasa/src/components/Dropdown/Dropdown.scss
@@ -1,54 +1,54 @@
-.select-bloc {
+.dropdown{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    border-radius: 5px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     align-items: center;
+    
    
 }
 
-select {
-    width: 100%;
-    height: 100%;
-    appearance: none;
-    border: 0;
-    outline: 0;
-    background-color: #FF6060;
+.dropdown-title {
+    display: flex;
     color: white;
+    background-color: #FF6060;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    height: 52px;
     padding-left: 10px;
-    border-radius: 5px;
-    overflow: hidden;
-    cursor: pointer;
+    font-size: 24px;
+    
+    
+    @media screen and (max-width: 640px) {
+        height: 30px;
+        
+    }
 }
 
-.select {
-    margin-top: 50px;
-    margin-left: 10%;
-    margin-bottom: 50px;
-    width: 80%;
-    height: 5vh;
-    position: relative;
-    font-weight: 500;
-    font-size: 24px;
-    overflow: hidden;
+.chevron {
+    width: 30px;
+    margin-right: 10px;
+    rotate: 180deg;
+    filter: invert(1);
     
 }
 
-.select::after {
-    position: absolute;
-    content: '\00003E';
-    right: 10px;
-    top: 30%;
-    pointer-events: none;
-    rotate: 270deg;
-    color: white;
-}
+.rotate {
+    transform: rotate(180deg); 
+    transition: transform 0.3s ease; 
+  }
+  
 
-.option-txt {
-    background-color: #F6F6F6;
+.dropdown-content {
     color: #FF6060;
-    font-weight: 500;
-    font-size: 18px;
-    text-align: center;
-    text-wrap: wrap;
-    max-width: 10px;
-}
+    background-color: #F6F6F6;
+    width: 80%;
+    font-size: 20px;
+    height: auto;
+    min-height: 100px;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    }
