--- a/Kasa/src/components/Cards/Cards.scss
+++ b/Kasa/src/components/Cards/Cards.scss
@@ -1,21 +1,41 @@
-
-
 .card-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
     background-color: #F6F6F6;
     width: 96%;
     margin-left: 40px;
     margin-top: 30px;
     margin-bottom: 30px;
     border-radius: 25px;
+    @media screen and (max-width: 640px) {
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: -10px;
+        margin-top: 0;
+        background-color: white;
+        
+    }
+    
+    
 }
 
 .card {
-    width: 340px;
+    width: 33,33%;
     height: 340px;
     background: linear-gradient(#FF6060, #ff4646);
     border-radius: 5%;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-bottom: 30px;
+    margin-top: 50px;
+    margin-left: 40px;
+    margin-right: 40px;
+    @media screen and (max-width: 640px){
+        width: 90%;
+    }
+   
+}
+
+.card-img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    border-radius: 5%;
+    
 }
