--- a/Kasa/src/components/Dropdown/Dropdown.scss
+++ b/Kasa/src/components/Dropdown/Dropdown.scss
@@ -19,6 +19,7 @@
     height: 52px;
     padding-left: 10px;
     font-size: 24px;
+    cursor: pointer;
     
     
     @media screen and (max-width: 640px) {
@@ -52,3 +53,5 @@
     display: flex;
     align-items: center;
     }
+
+    
