--- a/Kasa/src/components/Cards/Cards.scss
+++ b/Kasa/src/components/Cards/Cards.scss
@@ -32,6 +32,7 @@
    
 }
 
+
 .card-img {
     width: 100%;
     height: 50%;
@@ -39,3 +40,11 @@
     border-radius: 5%;
     
 }
+
+.location-title {
+    color: #FFFFFF;
+    
+}
+    
+
+
