--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -6,8 +6,10 @@
 @import "../components/ErrorBody/ErrorBody.scss";
 @import "../components/AboutBanner/AboutBanner.scss";
 @import "../components/Dropdown/Dropdown.scss";
+@import "../components/Carrousel/Carrousel.scss";
 @import "../styles/normalize.scss";
-@import "../styles/mixins.scss"
+@import "../styles/mixins.scss";
+
 
 
 
