Création du carrousel d'image ainsi que de son responsive design. Ajout d'une fonction facultative permettant le défilemment automatique du carrousel.

--- a/Kasa/src/components/Carrousel/Carrousel.scss
+++ b/Kasa/src/components/Carrousel/Carrousel.scss
@@ -1,4 +1,55 @@
-.right, .left {
+
+.right {
+    position: absolute;
+    right: 3%;
+    top: 35%;
+    z-index: 20;
     
-    background-color: black;
+}
+.left {
+    position: absolute;
+    z-index: 20;
+    top: 35%;
+    left: 3%;
+}
+.right, .left {
+    @media screen and (max-width: 640px) {
+        height: 24px;
+        width: 24px;
+        top: 50%;
+        
+    } 
+}
+
+
+
+
+.carrousel-container {
+    margin-top: 60px;
+    height: 415px;
+    border-radius: 25px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 640px) {
+        height: 255px;
+        
+    }
+}
+
+.carrousel-img {
+    filter: brightness(90%);
+    height: 100%;
+    width: 96%;
+    object-fit: cover;
+    border-radius: 25px;
+}
+
+.image-indicator {
+    position: absolute;
+    bottom: 0;
+    font-size: 18px;
+    color: white;
 }
