--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import "../components/AboutBanner/AboutBanner.scss";
 @import "../components/Dropdown/Dropdown.scss";
 @import "../components/Carrousel/Carrousel.scss";
+@import "../components/Description/Description.scss";
 @import "../styles/normalize.scss";
 @import "../styles/mixins.scss";
 
