--- a/Kasa/src/components/Cards/Cards.scss
+++ b/Kasa/src/components/Cards/Cards.scss
@@ -6,12 +6,15 @@
     margin-left: 40px;
     margin-top: 30px;
     margin-bottom: 30px;
+    padding-bottom: 40px;
     border-radius: 25px;
+    box-shadow: 0px 10px 13px -7px #000000;
     @media screen and (max-width: 640px) {
         grid-template-columns: repeat(1, 1fr);
         margin-left: -10px;
         margin-top: 0;
         background-color: white;
+        box-shadow: none;
         
     }
     
@@ -19,13 +22,15 @@
 }
 
 .card {
+    position: relative;
     width: 33,33%;
     height: 340px;
-    background: linear-gradient(#FF6060, #ff4646);
+    background-color: #F6F6F6;
     border-radius: 5%;
     margin-top: 50px;
     margin-left: 40px;
     margin-right: 40px;
+    box-shadow: 0px 10px 13px -7px #000000;
     @media screen and (max-width: 640px){
         width: 90%;
     }
@@ -34,15 +39,23 @@
 
 
 .card-img {
+    position: relative;
     width: 100%;
-    height: 50%;
+    height: 100%;
     object-fit: cover;
     border-radius: 5%;
+    filter: brightness(90%);
     
 }
 
 .location-title {
-    color: #FFFFFF;
+    position: absolute;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    
+    
     
 }
     
