--- a/Kasa/src/components/Cards/Cards.scss
+++ b/Kasa/src/components/Cards/Cards.scss
@@ -33,8 +33,11 @@
     box-shadow: 0px 10px 13px -7px #000000;
     @media screen and (max-width: 640px){
         width: 90%;
-    }
-   
+    }  
+}
+
+.card :hover{
+    transform: scale(1.01);
 }
 
 
