--- a/Kasa/src/styles/index.scss
+++ b/Kasa/src/styles/index.scss
@@ -8,6 +8,8 @@
 @import "../components/Dropdown/Dropdown.scss";
 @import "../components/Carrousel/Carrousel.scss";
 @import "../components/Description/Description.scss";
+@import "../components/Host/Host.scss";
+@import "../components/Rating/Rating.scss";
 @import "../styles/normalize.scss";
 @import "../styles/mixins.scss";
 
