--- a/Kasa/src/styles/normalize.scss
+++ b/Kasa/src/styles/normalize.scss
@@ -23,7 +23,11 @@
   body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
+    
+    
   }
+  
   
   /**
    * Render the `main` element consistently in IE.
@@ -73,7 +77,9 @@
   /**
    * Remove the gray background on active links in IE 10.
    */
-  
+  ul, li {
+    list-style-type: none;
+  }
   a {
     background-color: transparent;
     text-decoration: none;
@@ -194,12 +200,7 @@
    * Correct the inability to style clickable types in iOS and Safari.
    */
   
-  button,
-  [type="button"],
-  [type="reset"],
-  [type="submit"] {
-    -webkit-appearance: button;
-  }
+  
   
   /**
    * Remove the inner border and padding in Firefox.
@@ -289,10 +290,7 @@
    * 2. Correct the outline style in Safari.
    */
   
-  [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
-  }
+  
   
   /**
    * Remove the inner padding in Chrome and Safari on macOS.
