--- a/Kasa/src/components/Dropdown/Dropdown.scss
+++ b/Kasa/src/components/Dropdown/Dropdown.scss
@@ -1,7 +1,6 @@
 .dropdown{
     display: flex;
     flex-direction: column;
-    border-radius: 5px;
     padding-top: 15px;
     padding-bottom: 15px;
     align-items: center;
@@ -10,6 +9,7 @@
 }
 
 .dropdown-title {
+    border-radius: 10px;
     display: flex;
     color: white;
     background-color: #FF6060;
@@ -20,10 +20,12 @@
     padding-left: 10px;
     font-size: 24px;
     cursor: pointer;
+    font-size: 18px;
     
     
     @media screen and (max-width: 640px) {
         height: 30px;
+        font-size: 13px;
         
     }
 }
@@ -33,6 +35,10 @@
     margin-right: 10px;
     rotate: 180deg;
     filter: invert(1);
+    @media screen and (max-width: 640px) {
+        width: 20px;
+        
+    }
     
 }
 
@@ -43,6 +49,7 @@
   
 
 .dropdown-content {
+    border-radius: 5px;
     color: #FF6060;
     background-color: #F6F6F6;
     width: 80%;
@@ -52,6 +59,13 @@
     padding-left: 10px;
     display: flex;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    @media screen and (max-width: 640px) {
+       
+        font-size: 13px;
+        
+    }
     }
 
     
