--- a/Kasa/src/components/Header/Header.scss
+++ b/Kasa/src/components/Header/Header.scss
@@ -3,12 +3,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 40px;
+    margin-left: 40px;
 
     @media screen and (max-width: 640px) {
-        padding-left: 10px;
-        padding-right: 0px;
+       margin-left: 15px;
         
     }
 }
