--- a/Kasa/src/components/Dropdown/Dropdown.scss
+++ b/Kasa/src/components/Dropdown/Dropdown.scss
@@ -34,6 +34,7 @@
     width: 30px;
     margin-right: 10px;
     rotate: 180deg;
+    transition: 0.5s ease;
     filter: invert(1);
     @media screen and (max-width: 640px) {
         width: 20px;
@@ -44,7 +45,7 @@
 
 .rotate {
     transform: rotate(180deg); 
-    transition: transform 0.3s ease; 
+    transition: transform 0.5s ease; 
   }
   
 
@@ -54,18 +55,25 @@
     background-color: #F6F6F6;
     width: 80%;
     font-size: 20px;
-    height: auto;
     min-height: 100px;
     padding-left: 10px;
     display: flex;
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
+
+    
+
     @media screen and (max-width: 640px) {
        
         font-size: 13px;
         
     }
+    
     }
+
+    
+    
+    
 
     
