--- a/Kasa/src/components/Description/Description.scss
+++ b/Kasa/src/components/Description/Description.scss
@@ -63,6 +63,10 @@
     @media screen and (max-width: 640px) {
         flex-direction: column; 
         width: 100%;
+        margin-top: 10px;
+        align-items: center;
+        margin-left: -20px;
+        
          
     }
     .dropdown{
