--- a/Kasa/src/components/ErrorBody/ErrorBody.scss
+++ b/Kasa/src/components/ErrorBody/ErrorBody.scss
@@ -1,7 +1,5 @@
 .error-containeur {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   @include flex-center;
    height: 500px;
    @media screen and (max-width:640px) {
     height: 300px;
@@ -22,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     gap: 80px;
-    color: #FF6060;
+    @include principal-color;
     font-weight: 500;
     font-size: 36px;
     @media screen and (max-width: 640px) {
@@ -33,7 +31,7 @@
 }
 
 .link-error {
-    color: #FF6060;
+    @include principal-color;
     font-size: 18px;
     padding-bottom: 100px;
     @media screen and (max-width: 640px) {
