--- a/Kasa/src/components/Header/Header.scss
+++ b/Kasa/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
+@import "../../styles/mixins.scss";
+
 .header{
     width: 95%;
-    display: flex;
-    flex-direction: row;
+    @include flex-row;
     justify-content: space-between;
     margin-left: 40px;
 
@@ -29,8 +30,7 @@
 
 .navlink {
     padding-top: 20px;
-    display: flex;
-    align-items: center;
+    @include flex-center;
     gap: 57px;
 
     @media screen and (max-width: 640px) {
@@ -41,7 +41,7 @@
 
 .link {
     text-decoration: none;
-    color: #FF6060;
+    @include principal-color;
     font-weight: 500;
     font-size: 24px;
     &:hover {
