--- a/Kasa/src/components/Carrousel/Carrousel.scss
+++ b/Kasa/src/components/Carrousel/Carrousel.scss
@@ -30,9 +30,7 @@
     border-radius: 25px;
     width: 100%;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
     @media screen and (max-width: 640px) {
         height: 255px;
         
