--- a/Kasa/src/components/Description/Description.scss
+++ b/Kasa/src/components/Description/Description.scss
@@ -1,3 +1,4 @@
+
 .description-bloc {
     padding-left: 40px; 
 
@@ -8,7 +9,7 @@
 }
 
 .title {
-    color: #FF6060;
+    @include principal-color;
     font-size: 36px;
     font-weight: 500;
     margin-bottom: 0;
@@ -18,7 +19,7 @@
     }
 }
 .location {
-    color: #FF6060;
+    @include principal-color;
     font-size: 18px;
     font-weight: 500;
     margin-top: 0;
@@ -41,13 +42,11 @@
     }
 }
 .tag {
-    background-color: #FF6060;
+    @include bg-color;
     width: 115px;
     height: 30px;
     border-radius: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
     @media screen and (max-width: 640px) {
         width: 84px;
         height: 25px;
@@ -77,6 +76,10 @@
             align-items: center;
              
         }
+    }
+    .dropdown-content{
+        display: flex;
+        justify-content: flex-start;
     }
 }
 
