--- a/Kasa/src/components/Footer/Footer.scss
+++ b/Kasa/src/components/Footer/Footer.scss
@@ -1,9 +1,9 @@
+@import "../../styles/mixins.scss";
+
 .footer {
     background-color: black;
-    display: flex;
+    @include flex-center;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     max-height: 410px;
     min-height: 210px;
     
