--- a/Kasa/src/components/Dropdown/Dropdown.scss
+++ b/Kasa/src/components/Dropdown/Dropdown.scss
@@ -47,9 +47,10 @@
     transform: rotate(180deg); 
     transition: transform 0.5s ease; 
   }
+
   
 
-.dropdown-content {
+  .dropdown-content {
     border-radius: 5px;
     @include principal-color;
     background-color: #F6F6F6;
@@ -60,13 +61,24 @@
     @include flex-center;
     padding-top: 20px;
     padding-bottom: 20px;
+
+    &.fade-in {
+        animation: fadeIn 0.5s ease-in-out;
+    }
+
     @media screen and (max-width: 640px) {
-       
         font-size: 13px;
-        
     }
-    
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
+}
 
     
     
