instalation de react router dom, modifications version mobile : suppression du compteur d'images et agrandissement des volets déroulant.

--- a/Kasa/src/components/Carrousel/Carrousel.scss
+++ b/Kasa/src/components/Carrousel/Carrousel.scss
@@ -50,4 +50,8 @@
     bottom: 0;
     font-size: 18px;
     color: white;
+    @media screen and (max-width: 640px) {
+        display: none;
+        
+    }
 }
